2007-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bench_lang_intro.man: New files, documentation of the
	* bench_lang_spec.man: benchmark declaration language, and
	* bench_read.man: of the supporting packages.
	* bench_wcsv.man:
	* bench_wtext.man:

2007-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* libbench.tcl: Added new benchmark options -ipre, -ipost. Per
	* pkgIndex.tcl: iteration pre/post scripts, untimed. Version of
	* bench.cl:     package 'bench' is now 0.2.

2007-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bench_wcsv.tcl: Fixed sorting of descriptions in text and
	* bench_wtext.tcl: csv output. Version is now 0.1.2.

2007-01-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bench.tcl (bench::norm): Removed 'split ,' from code, was left
	* pkgIndex.tcl: in wrongly after the rewrite of the raw
	  representation. The relevant key is a list which we can and have
	  to use directly, no split required. The fixed bug caused the
	  normalization to fail and return the empty string for all
	  cells. Version number bumped to 0.1.1 for this.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-06-13  Andreas Kupries <andreask@activestate.com>

	* bench_read.tcl:  Rewrite the internal raw representation, use
	* bench.tcl:       lists as array keys, easier to handle, no
	* bench_wcsv.tcl:  splitting, and quoting is done automatically
	* bench_wtext.tcl: by Tcl itself. See [Tcllib SF Bug 1414159].

2006-05-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bench_read.tcl: Fixed typo "-error" --> "-code error".

2006-01-25  Michael Schlenker <mic42@users.sourceforge.net>

	* bench_wcsv.tcl : Fixed bug when trying to format benchs on windows.
	* bench_wtext.tcl: The interpreter path was truncated due to a misuse of
	split and lindex, where string first was appropriate.
